# gitster

./: .gitignore  COMO_GENERAR_UN_MAZO.md  README.md
app/: gradle.properties  settings.gradle.kts
app/app/: build.gradle.kts
app/app/src/main/: AndroidManifest.xml
app/app/src/main/assets/: deck.json
app/app/src/main/res/values-es/: strings.xml
app/gradle/: libs.versions.toml
app/gradle/wrapper/: gradle-wrapper.properties
docs/: qr-deck-contract.md
docs/rules/en/: index.html
docs/rules/es/: index.html
pipeline/: .env.example  pyproject.toml
pipeline/assets/deck/report/: deck_report_base.css  deck_report_base.js
pipeline/config/: config.example.json
pipeline/scripts/: generate_backgrounds.py
pipeline/src/gitster/: __init__.py  artist_display.py  cli.py  config.py  identity.py  io_utils.py  paths.py  release_dates.py  spotify_client.py  title_display.py
pipeline/src/gitster/catalog/: __init__.py  ingest.py  instances.py  songs.py  tracks.py  years.py
pipeline/src/gitster/curation/: __init__.py  audits.py  candidates.py  musicbrainz.py  review_import.py  store.py  sync.py
pipeline/src/gitster/deck/: __init__.py  build.py  packaging.py  pool.py  registry.py  selection.py
pipeline/src/gitster/export/: __init__.py  deck_json.py  render_pdf.py  report_html.py
pipeline/tests/: test_artist_display.py  test_deck_json.py  test_deck_report.py  test_identity_postmerge.py  test_musicbrainz.py  test_registry.py  test_review_import_ai.py  test_review_template.py  test_selection.py  test_title_display.py  test_xlsx_io.py
(+26 files in other folders)
