[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gitster"
version = "1.0.0"
description = "Gitster pipeline: build a custom Hitster-style card game from your group's Spotify playlists"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15.0",
    "spotipy>=2.24.0",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "tenacity>=8.2",
    "qrcode>=7.4",
    "reportlab>=4.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
gitster = "gitster.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
